# Housepredict-fastapi-react

./: .gitignore  README.md  deploy.sh  docker-compose.yml
ai_service/: .env.example  (+2 more)
backend/: .env  .env.example  Dockerfile  create_database.py  model.pkl  pyproject.toml  wait_for_mysql.py
backend/app/: db.py  deps.py  main.py  models.py  old_schemas.py  schemas.py  train.py
backend/app/core/: security.py
backend/app/routers/: annotations.py  auth.py  crawl_house.py  crud.py  houses.py  predict.py
backend/app/schemas/: __init__.py  annotation.py  auth.py  crawl_house.py  house.py  predict.py  user.py
backend/app/scripts/: import_crawl_json.py
backend/app/services/: dataset.py
backend/app/utils/: aliyun_email.py  email_store.py
backend/data/: house_price_model.pkl  house_prices.csv  model.joblib
backend/data/annotations/: 107106078902.json  107112072868.json  107114392823.json
backend/data/lianjia_crawl_data/: 107109823532_改两房 楼层佳 98年商品房 一梯二户 南北通.json  107111232058_大一房 景观楼层 花园位置 看房方便 诚心出售.json  107111536010_9号线旁电梯阁楼全明视野开阔公园旁.json  107112767451_2017年商品房低总价配套完善全明户型采光好有车位.json  107113233297_新上好房采光没遮挡南北小两房总价低.json  107113411111_内环内中间位置-纯边套电梯房电梯房.json  107114021894_前滩两站路新加坡设计北门地铁南门商场看房方便.json  (+7 more)
backend/lianjia_state_json/: 107109162711_已加装电梯中间位置中间楼层地铁口998米.json  107112065240_小区位置优越南北格局交通便利.json  107112162672_一口价推广只在链家卖非标小两房精装修有钥匙.json  107112313532_内环边全明户型花园位置诚售进入口出入方便.json  107113332541_不靠路 大三房 一梯两户 下楼就是公寓.json  107113895634_生活配套齐全可以直接拎包入住.json  107113903669_位置佳近地铁总价低业主诚意卖电梯房.json  107114519220_08年商品小区地铁18号线高区非顶楼出门及步行街.json
backend/migrations/: env.py
(+357 files in other folders)
